# FirstTry

./: 1.txt  CMakeLists.txt  gauss.cpp  main.cpp
